--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -132,7 +132,7 @@ hr.bottom {
     .video-summary {
         padding-top: 2rem;
         width: 100vw;
-        height: 32rem;
+        height: 60vw;
     }
 
     .title {
